# nlp_lab5

./: .env.example  .gitignore  BOT_SETUP.md  BOT_TESTING.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LLM_MCP_INTEGRATION.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_VERIFIED.md  NODES_IMPLEMENTATION.md  QUICK_START.md  README.md  pyproject.toml  test_bot_startup.py  test_nodes_live.py  verify_mcp.py
.cache/: api_cache.db
docs/: agent_flow.drawio  agent_spec.md  graph_design.md  handoff.md
eval/: README.md  ablations.py  analysis.py  collect_trajectories.py  metrics.json  pricing.py  tasks.example.json  tasks.json
mcp/: README.md
mcp_literature_server/: INTEGRATION.md  README.md  __init__.py  __main__.py  cache.py  literature_tools.py  research_server.py
src/ai340_track_a_research_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/research_agent/: __init__.py  bot.py  budgets.py  graph.py  nodes.py  routing.py  state.py  tool_contracts.py
tests/: test_literature_tools.py  test_routing.py
