[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai340-track-a-research-agent"
version = "0.1.0"
description = "Track A scientific literature research agent scaffold for AI340 Assignment 5"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
agent = [
  "langgraph>=0.2",
  "langchain-core>=0.3",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
