[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai340-track-a-research-agent"
version = "0.1.0"
description = "Track A scientific literature research agent scaffold for AI340 Assignment 5"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
agent = [
  "langgraph>=0.2",
  "langchain-core>=0.3",
  "langchain-anthropic>=0.1.0",
]
mcp = [
  "mcp>=1.0.0",
  "requests>=2.31.0",
]
bot = [
  "python-telegram-bot>=20.0",
  "python-dotenv>=1.0.0",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pytest-asyncio>=0.21.0",
]
ablation = [
  "langchain-openai>=0.2",
  "langchain-google-genai>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
